// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试标记插入函数（insertIndicator） 在一级列表后插入标记 1`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 2,
                      "offset": 6,
                    },
                    "start": {
                      "column": 3,
                      "line": 2,
                      "offset": 3,
                    },
                  },
                  "type": "text",
                  "value": "第一节",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 2,
                  "offset": 6,
                },
                "start": {
                  "column": 3,
                  "line": 2,
                  "offset": 3,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 2,
              "offset": 6,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 4,
                      "offset": 13,
                    },
                    "start": {
                      "column": 3,
                      "line": 4,
                      "offset": 10,
                    },
                  },
                  "type": "text",
                  "value": "第二节",
                },
                {
                  "type": "html",
                  "value": "<span class="indicator" />",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 4,
                  "offset": 13,
                },
                "start": {
                  "column": 3,
                  "line": 4,
                  "offset": 10,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 4,
              "offset": 13,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 8,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": {
        "end": {
          "column": 6,
          "line": 4,
          "offset": 13,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "spread": true,
      "start": null,
      "type": "list",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 5,
      "offset": 14,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`测试标记插入函数（insertIndicator） 在二级列表后插入标记 1`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 2,
                      "offset": 6,
                    },
                    "start": {
                      "column": 3,
                      "line": 2,
                      "offset": 3,
                    },
                  },
                  "type": "text",
                  "value": "第一节",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 2,
                  "offset": 6,
                },
                "start": {
                  "column": 3,
                  "line": 2,
                  "offset": 3,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 2,
              "offset": 6,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 4,
                      "offset": 13,
                    },
                    "start": {
                      "column": 3,
                      "line": 4,
                      "offset": 10,
                    },
                  },
                  "type": "text",
                  "value": "第二节",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 4,
                  "offset": 13,
                },
                "start": {
                  "column": 3,
                  "line": 4,
                  "offset": 10,
                },
              },
              "type": "paragraph",
            },
            {
              "children": [
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "position": {
                            "end": {
                              "column": 12,
                              "line": 6,
                              "offset": 26,
                            },
                            "start": {
                              "column": 7,
                              "line": 6,
                              "offset": 21,
                            },
                          },
                          "type": "text",
                          "value": "第2.1节",
                        },
                      ],
                      "position": {
                        "end": {
                          "column": 12,
                          "line": 6,
                          "offset": 26,
                        },
                        "start": {
                          "column": 7,
                          "line": 6,
                          "offset": 21,
                        },
                      },
                      "type": "paragraph",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 12,
                      "line": 6,
                      "offset": 26,
                    },
                    "start": {
                      "column": 5,
                      "line": 6,
                      "offset": 19,
                    },
                  },
                  "spread": false,
                  "type": "listItem",
                },
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "position": {
                            "end": {
                              "column": 12,
                              "line": 8,
                              "offset": 39,
                            },
                            "start": {
                              "column": 7,
                              "line": 8,
                              "offset": 34,
                            },
                          },
                          "type": "text",
                          "value": "第2.2节",
                        },
                        {
                          "type": "html",
                          "value": "<span class="indicator" />",
                        },
                      ],
                      "position": {
                        "end": {
                          "column": 12,
                          "line": 8,
                          "offset": 39,
                        },
                        "start": {
                          "column": 7,
                          "line": 8,
                          "offset": 34,
                        },
                      },
                      "type": "paragraph",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 12,
                      "line": 8,
                      "offset": 39,
                    },
                    "start": {
                      "column": 5,
                      "line": 8,
                      "offset": 32,
                    },
                  },
                  "spread": false,
                  "type": "listItem",
                },
              ],
              "ordered": false,
              "position": {
                "end": {
                  "column": 5,
                  "line": 9,
                  "offset": 44,
                },
                "start": {
                  "column": 5,
                  "line": 6,
                  "offset": 19,
                },
              },
              "spread": true,
              "start": null,
              "type": "list",
            },
          ],
          "position": {
            "end": {
              "column": 5,
              "line": 9,
              "offset": 44,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 8,
            },
          },
          "spread": true,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": {
        "end": {
          "column": 5,
          "line": 9,
          "offset": 44,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "spread": true,
      "start": null,
      "type": "list",
    },
  ],
  "position": {
    "end": {
      "column": 5,
      "line": 9,
      "offset": 44,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`测试标记插入函数（insertIndicator） 在代码块后跳过插入标记 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 6,
              "line": 2,
              "offset": 6,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "text",
          "value": "这是第一行",
        },
      ],
      "position": {
        "end": {
          "column": 6,
          "line": 2,
          "offset": 6,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "paragraph",
    },
    {
      "lang": "haskell",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 6,
          "offset": 27,
        },
        "start": {
          "column": 1,
          "line": 4,
          "offset": 8,
        },
      },
      "type": "code",
      "value": "测试代码",
    },
  ],
  "position": {
    "end": {
      "column": 5,
      "line": 7,
      "offset": 32,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`测试标记插入函数（insertIndicator） 在普通段落内的行内代码块插入标记 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 5,
              "line": 2,
              "offset": 5,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "text",
          "value": "测试段落",
        },
        {
          "position": {
            "end": {
              "column": 16,
              "line": 2,
              "offset": 16,
            },
            "start": {
              "column": 5,
              "line": 2,
              "offset": 5,
            },
          },
          "type": "inlineCode",
          "value": "这是一个行内代码块",
        },
        {
          "type": "html",
          "value": "<span class="indicator" />",
        },
      ],
      "position": {
        "end": {
          "column": 16,
          "line": 2,
          "offset": 16,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 3,
      "offset": 17,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`测试标记插入函数（insertIndicator） 在普通段落后插入标记 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 5,
              "line": 2,
              "offset": 5,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "text",
          "value": "测试段落",
        },
        {
          "type": "html",
          "value": "<span class="indicator" />",
        },
      ],
      "position": {
        "end": {
          "column": 5,
          "line": 2,
          "offset": 5,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 5,
      "line": 3,
      "offset": 10,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`测试标记插入函数（insertIndicator） 在链接后插入标记 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 3,
              "line": 2,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "text",
          "value": "这是",
        },
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 9,
                  "line": 2,
                  "offset": 9,
                },
                "start": {
                  "column": 4,
                  "line": 2,
                  "offset": 4,
                },
              },
              "type": "text",
              "value": "完整的链接",
            },
            {
              "type": "html",
              "value": "<span class="indicator" />",
            },
          ],
          "position": {
            "end": {
              "column": 33,
              "line": 2,
              "offset": 33,
            },
            "start": {
              "column": 3,
              "line": 2,
              "offset": 3,
            },
          },
          "title": null,
          "type": "link",
          "url": "https://bytedance.com",
        },
      ],
      "position": {
        "end": {
          "column": 33,
          "line": 2,
          "offset": 33,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 3,
      "offset": 34,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`测试标记插入函数（insertIndicator） 末尾图片后跳过插入标记 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 6,
              "line": 2,
              "offset": 6,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "text",
          "value": "这是第一行",
        },
      ],
      "position": {
        "end": {
          "column": 6,
          "line": 2,
          "offset": 6,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "alt": "image",
          "position": {
            "end": {
              "column": 75,
              "line": 4,
              "offset": 82,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 8,
            },
          },
          "title": null,
          "type": "image",
          "url": "https://pic1.zhimg.com/v2-b444070848d54baf536222b22a51fba4_b.jpg",
        },
      ],
      "position": {
        "end": {
          "column": 75,
          "line": 4,
          "offset": 82,
        },
        "start": {
          "column": 1,
          "line": 4,
          "offset": 8,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 5,
      "line": 5,
      "offset": 87,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`测试标记插入函数（insertIndicator） 综合插入场景 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 3,
              "line": 2,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "text",
          "value": "这是",
        },
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 9,
                  "line": 2,
                  "offset": 9,
                },
                "start": {
                  "column": 4,
                  "line": 2,
                  "offset": 4,
                },
              },
              "type": "text",
              "value": "完整的链接",
            },
          ],
          "position": {
            "end": {
              "column": 33,
              "line": 2,
              "offset": 33,
            },
            "start": {
              "column": 3,
              "line": 2,
              "offset": 3,
            },
          },
          "title": null,
          "type": "link",
          "url": "https://bytedance.com",
        },
      ],
      "position": {
        "end": {
          "column": 33,
          "line": 2,
          "offset": 33,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 5,
              "line": 4,
              "offset": 39,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 35,
            },
          },
          "type": "text",
          "value": "测试段落",
        },
        {
          "position": {
            "end": {
              "column": 16,
              "line": 4,
              "offset": 50,
            },
            "start": {
              "column": 5,
              "line": 4,
              "offset": 39,
            },
          },
          "type": "inlineCode",
          "value": "这是一个行内代码块",
        },
      ],
      "position": {
        "end": {
          "column": 16,
          "line": 4,
          "offset": 50,
        },
        "start": {
          "column": 1,
          "line": 4,
          "offset": 35,
        },
      },
      "type": "paragraph",
    },
    {
      "lang": "haskell",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 8,
          "offset": 71,
        },
        "start": {
          "column": 1,
          "line": 6,
          "offset": 52,
        },
      },
      "type": "code",
      "value": "测试代码",
    },
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 10,
                      "offset": 78,
                    },
                    "start": {
                      "column": 3,
                      "line": 10,
                      "offset": 75,
                    },
                  },
                  "type": "text",
                  "value": "第一节",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 10,
                  "offset": 78,
                },
                "start": {
                  "column": 3,
                  "line": 10,
                  "offset": 75,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 10,
              "offset": 78,
            },
            "start": {
              "column": 1,
              "line": 10,
              "offset": 73,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 12,
                      "offset": 85,
                    },
                    "start": {
                      "column": 3,
                      "line": 12,
                      "offset": 82,
                    },
                  },
                  "type": "text",
                  "value": "第二节",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 12,
                  "offset": 85,
                },
                "start": {
                  "column": 3,
                  "line": 12,
                  "offset": 82,
                },
              },
              "type": "paragraph",
            },
            {
              "children": [
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "position": {
                            "end": {
                              "column": 12,
                              "line": 14,
                              "offset": 98,
                            },
                            "start": {
                              "column": 7,
                              "line": 14,
                              "offset": 93,
                            },
                          },
                          "type": "text",
                          "value": "第2.1节",
                        },
                      ],
                      "position": {
                        "end": {
                          "column": 12,
                          "line": 14,
                          "offset": 98,
                        },
                        "start": {
                          "column": 7,
                          "line": 14,
                          "offset": 93,
                        },
                      },
                      "type": "paragraph",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 12,
                      "line": 14,
                      "offset": 98,
                    },
                    "start": {
                      "column": 5,
                      "line": 14,
                      "offset": 91,
                    },
                  },
                  "spread": false,
                  "type": "listItem",
                },
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "position": {
                            "end": {
                              "column": 12,
                              "line": 16,
                              "offset": 111,
                            },
                            "start": {
                              "column": 7,
                              "line": 16,
                              "offset": 106,
                            },
                          },
                          "type": "text",
                          "value": "第2.2节",
                        },
                        {
                          "type": "html",
                          "value": "<span class="indicator" />",
                        },
                      ],
                      "position": {
                        "end": {
                          "column": 12,
                          "line": 16,
                          "offset": 111,
                        },
                        "start": {
                          "column": 7,
                          "line": 16,
                          "offset": 106,
                        },
                      },
                      "type": "paragraph",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 12,
                      "line": 16,
                      "offset": 111,
                    },
                    "start": {
                      "column": 5,
                      "line": 16,
                      "offset": 104,
                    },
                  },
                  "spread": false,
                  "type": "listItem",
                },
              ],
              "ordered": false,
              "position": {
                "end": {
                  "column": 12,
                  "line": 16,
                  "offset": 111,
                },
                "start": {
                  "column": 5,
                  "line": 14,
                  "offset": 91,
                },
              },
              "spread": true,
              "start": null,
              "type": "list",
            },
          ],
          "position": {
            "end": {
              "column": 12,
              "line": 16,
              "offset": 111,
            },
            "start": {
              "column": 1,
              "line": 12,
              "offset": 80,
            },
          },
          "spread": true,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": {
        "end": {
          "column": 12,
          "line": 16,
          "offset": 111,
        },
        "start": {
          "column": 1,
          "line": 10,
          "offset": 73,
        },
      },
      "spread": true,
      "start": null,
      "type": "list",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 17,
      "offset": 112,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
